[gd_scene load_steps=8 format=2]

[ext_resource path="res://tiles/grass and cliffs/tile182.png" type="Texture" id=1]
[ext_resource path="res://buildable_area/BuildableSlotDisplay.gd" type="Script" id=2]
[ext_resource path="res://buildable_area/green_shader.gdshader" type="Shader" id=3]
[ext_resource path="res://tiles/grass and cliffs/inventory_slot.png" type="Texture" id=4]
[ext_resource path="res://buildable_area/red_shader.gdshader" type="Shader" id=5]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 5 )

[node name="BuildableSlotDisplay" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1216.0
margin_bottom = -656.0
rect_min_size = Vector2( 64, 64 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="Sprite" parent="."]
position = Vector2( 32, 32 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 32, 32 )
texture = ExtResource( 1 )

[node name="GreenSquare" type="Sprite" parent="."]
visible = false
material = SubResource( 1 )
position = Vector2( 30, 30 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="RedSquare" type="Sprite" parent="."]
visible = false
material = SubResource( 2 )
position = Vector2( 30, 30 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="Unit" type="Node2D" parent="."]
position = Vector2( 32, 32 )

[connection signal="mouse_entered" from="." to="." method="_on_BuildableSlotDisplay_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_BuildableSlotDisplay_mouse_exited"]
